# galleon

./: .gitignore  CMakeLists.txt  README.md
src/: linkedlist.cpp  linkedlist.h  linkedlist.hpp
tests/: main.cpp
